# novax-price-getter

./: Cargo.toml  README.md
.cargo/: config.toml
.novax/abis/: xexchange_router.abi.json
src/: lib.rs  main.rs  xexchange.rs
src/errors/: app.rs  mod.rs  xexchange.rs
src/utils/: constants.rs
tests/: test_get_price.rs
